--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
  - "3.5"
 
 install:
+ - sudo apt-get install python
+ - sudo apt-get install python-pip
  - pip3 install plumbum
  - pip3 install websocket-client
  - pip3 install asyncio
